--- a/vignettes/waterquality_vignette.Rmd
+++ b/vignettes/waterquality_vignette.Rmd
@@ -109,7 +109,7 @@ plot(Harsha_All) # Only displays first 12 of 28
 ## Mapping Functions
 
 ### Map_WQ_raster
-`Map_WQ_raster` which wraps functionality from the tmap package to help users generate fast and simple data visualization of their `wq_calc()` raster output along with optional geospatial objects and histogram. In order to simplify this process and reduce the technical expertise required, we have reduced the number of arguments to the following: 
+This function wraps the ["tmap"](https://cran.r-project.org/web/packages/tmap/tmap.pdf) package to help users generate an efficient map of their `wq_calc()` raster output along with optional geospatial objects and histogram. In order to simplify this process and reduce the technical expertise required, we have reduced the number of arguments to the following: 
 
 `WQ_raster` - Raster file generated from `wq_calc` or other GeoTiff file	
 `sample_points` - geospatial file (.shp or .gpkg) containing sampling locations 
@@ -117,23 +117,13 @@ plot(Harsha_All) # Only displays first 12 of 28
 `raster_style` - method to process the color scale when col is a numeric variable. Please refer to the style argument in the ?tmap::tm_raster() function for more details (Default is "quantile").
 `histogram` - Option to add or remove a histogram of the data values. (Default is TRUE)
 
+#### Example  
 
-### Map_WQ_basemap
-`Map_WQ_basemap` wraps the tmap package to help users generate fast and simple data visualization of using Bing basemaps along with optional geospatial objects and histogram.
-`WQ_extent` - geospatial file (.shp or .gpkg) used to extract aerial imagery from Bing basemaps	`sample_points` - geospatial file (.shp or .gpkg) containing sampling locations 
-`map_title` - text used to generate title of map
-`points_style` - method to process the color scale when col is a numeric variable. Please refer to the style argument in the ?tmap::tm_raster() function for more details (Default is "quantile").
-`histogram` - Option to add or remove a histogram of the data values. (Default is TRUE)
-
-### Examples
-
-#### Map_WQ_raster
 ```{r, results='hide', message=FALSE, warning=FALSE}
 library(waterquality)
 library(raster)
 library(tmap)
 library(sf)
-library(OpenStreetMap)
 s2 = stack(system.file("raster/S2_Harsha.tif", package = "waterquality"))
 MM12NDCI = wq_calc(s2, alg = "MM12NDCI", sat = "sentinel2")
 samples = st_read(system.file("raster/Harsha_Simple_Points_CRS.gpkg", package = "waterquality"))
@@ -149,11 +139,23 @@ Map_WQ_raster(WQ_raster = MM12NDCI,
 
 ```
 
-#### Map_WQ_basemap  
+
+### Map_WQ_basemap
+This function wraps the ["tmap"](https://cran.r-project.org/web/packages/tmap/tmap.pdf) & ["tmaptools"](https://cran.r-project.org/web/packages/tmaptools/tmaptools.pdf) packages in order to generate a map using user-defined vectors (points and a polygon) overlaid on a Bing basemap. In order to simplify this process and reduce the technical expertise required, we have reduced the number of arguments to the following: 
+
+`WQ_extent` - geospatial file (.shp or .gpkg) used to extract aerial imagery from Bing basemaps	
+`WQ_parameter` - text referring to column heading of data being mapped (i.e. Chl-a, PC, etc.)
+`sample_points` - geospatial file (.shp or .gpkg) containing sampling locations
+`map_title` - text used to generate title of map
+`points_style` - method to process the color scale when col is a numeric variable. Please refer to the style argument in the ?tmap::tm_raster() function for more details (Default is "quantile").
+`histogram` - Option to add or remove a histogram of the data values. (Default is TRUE)
+
+#### Example  
 
 ```{r,fig.height = 5, fig.width = 6}
 Map_WQ_basemap(WQ_extent = lake_extent,
               sample_points = samples,
+              WQ_parameter = "Chl_ugL",
               map_title= "Water Quality Map",
               points_style = "quantile",
               histogram = TRUE)
