--- a/vignettes/waterquality_vignette.Rmd
+++ b/vignettes/waterquality_vignette.Rmd
@@ -16,26 +16,26 @@ knitr::opts_chunk$set(
   echo = TRUE)
 ```
 
-The main purpose of **waterquality** is to quickly and easily convert satellite-based reflectance imagery into one or many well-known water quality algorithms designed for the detection of harmful algal blooms (HABs) using the following pigment proxies: chlorophyll-a, blue-green algae (Phycocyanin), and Turbidity. Currently, this package is able to process [45 algorithms](https://rajohansen.github.io/waterquality/reference/index.html) for the following satellite-based imagers: WorldView-2, Sentinel-2, Landsat-8, MODIS, MERIS, and OLCI. In order to improve the aesthetics of the `wq_calc` output, we have developed a series of intuitive `Map_WQ` functions which hopefully will reduce technical barriers due to coding and the myriad of map options.  
+The main purpose of **waterquality** is to quickly and easily convert satellite-based reflectance imagery into one or many well-known water quality indices designed for the detection of harmful algal blooms (HABs) using the following pigment proxies: chlorophyll-a, blue-green algae (phycocyanin), and turbidity. Currently, this package is able to process [45 algorithms](https://rajohansen.github.io/waterquality/reference/index.html) for the following satellite-based imagers: WorldView-2 and -3, Sentinel-2, Landsat-8, MODIS, MERIS, and OLCI. In order to improve the aesthetics of the `wq_calc` output, a series of intuitive `Map_WQ` functions were developed to help reduce technical barriers due to coding and the myriad of map options.  
 
-Additional functionality of the package include a series of `extract_lm` functions which wrap the ["Fitting Linear Models"](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/lm) and the ["caret"](http://topepo.github.io/caret/index.html) packages to quickly generate a suite of regression models with standardized outputs. These functions range from simple linear models for a single dependent and independent variable to robust linear regression using crossvalidation over multiple dependent and independent variables. These functions are extremely useful when conducting experimental testing on large number of satellite algorithms across multiple water quality parameters.**NOTE** these functions require ground-truth data in order to develop the models.  
+Additional functionality of the package includes a series of `extract_lm` functions which wrap the ["Fitting Linear Models"](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/lm) and the ["caret"](http://topepo.github.io/caret/index.html) packages to quickly generate a suite of regression models with standardized outputs. These functions range from simple linear models for a single dependent and independent variable to robust linear regression using crossvalidation over multiple dependent and independent variables. These functions are extremely useful when conducting experimental testing on a large number of satellite algorithms across multiple water quality parameters. **NOTE** these functions require ground-truth data in order to develop the models.  
   
-For an example of our entire research workflow, which includes data acquisition, image pre-processing, analyses, and results please see our publication entitled["Waterquality: An Open-Source R Package for the Detection and Quantification of Cyanobacterial Harmful Algal Blooms and Water Quality"](https://erdc-library.erdc.dren.mil/jspui/bitstream/11681/35053/3/ERDC-EL%20TR-19-20.pdf). 
+For an example of our entire research workflow, which includes data acquisition, image pre-processing, analyses, and results please see our publication entitled ["Waterquality: An Open-Source R Package for the Detection and Quantification of Cyanobacterial Harmful Algal Blooms and Water Quality"](https://erdc-library.erdc.dren.mil/jspui/bitstream/11681/35053/3/ERDC-EL%20TR-19-20.pdf). 
 
 ## Algorithms
 
-Currently, we have a list of [45 algorithms](https://rajohansen.github.io/waterquality/reference/index.html) that can be applied for the detection of these three parameters. 
+Currently, the package includes a total of [45 algorithms](https://rajohansen.github.io/waterquality/reference/index.html) that can be applied for the detection of the three parameters. 
 **NOTE** not all sensors are capable of using all algorithms due to their spectral configurations. 
 Each of the algorithms are searchable within the package, where there is a reference to the original paper (Ex. `?Am092Bsub()`). 
-Each algorithm is also linked to the original papers water quality parameters (chlorophyll-a, phycocyanin, Turbidity) by type, which allows users to select all algorithms for that type.
-The final outputs are raster stacked images which represent relative index values and are not direct estimated chlorophyll-a, phycocyanin, or turbidity values. However, these relative values can be converted in to estimated concentration values using the `extract_lm` functions and ground truth measurements. 
+Each algorithm is also linked to the original papers water quality parameters (chlorophyll-a, phycocyanin, turbidity) by type, which allows users to select all algorithms for that type.
+The final outputs are raster stacked images which represent relative index values and are not direct estimations of chlorophyll-a, phycocyanin, or turbidity values. However,  relative index values can be converted to estimated concentration values using the `extract_lm` functions and ground truth measurements. 
 
 
 ## Water Quality Functions 
 
 ### wq_calc()
 
-The main function of this package is called `wq_calc()` which calculates water quality indices by using an reflectance raster stack as an input, user-defined algorithm(s) selection, and satellite configuration selection corresponding to the following three arguments: `raster_stack`, `alg`, and `sat`.
+The main function of this package is called `wq_calc()` which calculates water quality indices by using a reflectance raster stack as an input, user-defined algorithm(s) selection, and satellite configuration selection corresponding to the following three arguments: `raster_stack`, `alg`, and `sat`.
 
 - `raster_stack` - The input reflectance image to be used in band algorithm calculation. 
 - `alg` - Determines the indices to be utilized:
@@ -100,7 +100,7 @@ plot(Harsha_All) # Only displays first 16 of 28
 ## Mapping Functions  
 
 ### Map_WQ_raster
-This function wraps the ["tmap"](https://cran.r-project.org/web/packages/tmap/tmap.pdf) package to help users to efficiently generate a map of a raster image which can be overlaid with optional geospatial objects and data histogram. In order to simplify this process and reduce the technical expertise required, we have reduced the number of arguments to the following: 
+This function wraps the ["tmap"](https://cran.r-project.org/web/packages/tmap/tmap.pdf) package to help users to efficiently generate a map of a raster image which can be overlaid with optional geospatial objects and data histogram. In order to simplify this process and reduce the technical expertise required, the number of arguments were reduced to the following: 
 - `WQ_raster` - Raster file generated from `wq_calc` or other GeoTiff file	
 - `sample_points` - geospatial file (.shp or .gpkg) containing sampling locations 
 - `map_title` - text used to generate title of map
@@ -129,7 +129,7 @@ Map_WQ_raster(WQ_raster = MM12NDCI,
 ```
   
 ### Map_WQ_basemap
-This function wraps the ["tmap"](https://cran.r-project.org/web/packages/tmap/tmap.pdf) & ["tmaptools"](https://cran.r-project.org/web/packages/tmaptools/tmaptools.pdf) packages in order to generate a map using user-defined vectors (points and a polygon) overlaid on a Bing basemap. In order to simplify this process and reduce the technical expertise required, we have reduced the number of arguments to the following: 
+This function wraps the ["tmap"](https://cran.r-project.org/web/packages/tmap/tmap.pdf) & ["tmaptools"](https://cran.r-project.org/web/packages/tmaptools/tmaptools.pdf) packages in order to generate a map using user-defined vectors (points and a polygon) overlaid on a Bing basemap. In order to simplify this process and reduce the technical expertise required, the number of arguments were reduced to the following: 
 - `WQ_extent` - geospatial file (.shp or .gpkg) used to extract aerial imagery from Bing basemaps	
 - `WQ_parameter` - text referring to column heading of data being mapped (i.e. Chl-a, PC, etc.)
 - `sample_points` - geospatial file (.shp or .gpkg) containing sampling locations
@@ -149,7 +149,7 @@ Map_WQ_basemap(WQ_extent = lake_extent,
 ```
   
 ## Modeling Functions
-Developing models is an essential step in water quality monitoring, but this does require sufficient coincident ground truth data. These functions have been developed to combine user-provided truth data and the results from the `wq_calc` function to generate a single or series of regression models. These functions have been developed to easily conduct linear models with standardized outputs. These functions are meant intuitive yet robust. Most effectively the functions will utilize a single comma delimited (.csv) files as the data frame source. Although these functions were designed for our water quality research, they can be used as standalone functions for any data to generate the same standardized outputs containing the following:   
+Developing models is an essential step in water quality monitoring, and this requires sufficient coincident ground truth data. These functions have been developed to combine user-provided ground truth data and the results from the `wq_calc` function to generate a single or series of regression models. These functions have been developed to easily conduct linear models with standardized outputs, providing intuitive yet robust options. Most effectively, the functions will utilize a single comma delimited (.csv) file as the data frame source. Although these functions were designed for our water quality research, they can be used as standalone functions for any data to generate the same standardized outputs containing the following:   
 **Global Model**  
 - r^2^  
 - p-value  
@@ -161,7 +161,7 @@ Developing models is an essential step in water quality monitoring, but this doe
 - average RMSE  
 - average MAE  
 
-Additionally we have provided code that might be useful to help users import and extract the data from a raster stack image (i.e. output from `wq_calc`), combine it with a geospatial object (i.e shapefiles of sampling locations), and export the results to a .csv file to be used in the modeling functions. 
+Additionally, we have provided code that might be useful to help users import and extract the data from a raster stack image (i.e. output from `wq_calc`), combine it with a geospatial object (i.e shapefiles of sample locations), and export the results to a .csv file to be used in the modeling functions. 
 
 ```{r, eval = FALSE}
 #Input raster image
